third_party/move/move-compiler-v2/tests/signed-int/invalid/invalid_constants.exp

Diagnostics:
error: invalid number literal
  ┌─ tests/signed-int/invalid/invalid_constants.move:7:22
  │
7 │   const V3_64: i64 = 9223372036854775808i64; // out of upper bound: max value of i64 is 9223372036854775807
  │                      ^^^^^^^^^^^^^^^^^^^^^^ Invalid number literal. The given literal cannot fit into 'i64'

error: invalid number literal
  ┌─ tests/signed-int/invalid/invalid_constants.move:8:22
  │
8 │   const V4_64: i64 = -9223372036854775809; // out of lower bound: min value of i64 is -9223372036854775808
  │                      ^^^^^^^^^^^^^^^^^^^^ Invalid number literal. The given literal cannot fit into the largest possible integer type, 'u256'

error: invalid number literal
  ┌─ tests/signed-int/invalid/invalid_constants.move:9:22
  │
9 │   const V5_64: i64 = -9223372036854775809i64; // out of lower bound: min value of i64 is -9223372036854775808
  │                      ^^^^^^^^^^^^^^^^^^^^^^^ Invalid number literal. The given literal cannot fit into 'i64'

error: invalid number literal
   ┌─ tests/signed-int/invalid/invalid_constants.move:14:24
   │
14 │   const V3_128: i128 = 170141183460469231731687303715884105728i128; // out of upper bound: max value of i128 is 170141183460469231731687303715884105727
   │                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid number literal. The given literal cannot fit into 'i128'

error: invalid number literal
   ┌─ tests/signed-int/invalid/invalid_constants.move:15:24
   │
15 │   const V4_128: i128 = -170141183460469231731687303715884105729; // out of lower bound: min value of i64 is -170141183460469231731687303715884105728
   │                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid number literal. The given literal cannot fit into the largest possible integer type, 'u256'

error: invalid number literal
   ┌─ tests/signed-int/invalid/invalid_constants.move:16:24
   │
16 │   const V5_128: i128 = -170141183460469231731687303715884105729i128; // out of lower bound: min value of i64 is -170141183460469231731687303715884105728
   │                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid number literal. The given literal cannot fit into 'i128'

error: invalid number literal
   ┌─ tests/signed-int/invalid/invalid_constants.move:19:32
   │
19 │   const V_STRUCT64: i64::I64 = -1;
   │                                ^^ Invalid number literal. The given literal cannot fit into the largest possible integer type, 'u256'

error: invalid number literal
   ┌─ tests/signed-int/invalid/invalid_constants.move:20:35
   │
20 │   const V_STRUCT128: i128::I128 = -1;
   │                                   ^^ Invalid number literal. The given literal cannot fit into the largest possible integer type, 'u256'

error: invalid number literal
   ┌─ tests/signed-int/invalid/invalid_constants.move:25:13
   │
25 │     let c = 9223372036854775808i64; // constant does not fit into i64 && type mismatch in `res7 + c`, expected u64|u128|u256|i128, actual i64
   │             ^^^^^^^^^^^^^^^^^^^^^^ Invalid number literal. The given literal cannot fit into 'i64'

error: invalid number literal
   ┌─ tests/signed-int/invalid/invalid_constants.move:26:13
   │
26 │     let d = -9223372036854775809; // interpreted as an i128
   │             ^^^^^^^^^^^^^^^^^^^^ Invalid number literal. The given literal cannot fit into the largest possible integer type, 'u256'

error: invalid number literal
   ┌─ tests/signed-int/invalid/invalid_constants.move:27:13
   │
27 │     let e = -9223372036854775809i64; // constant does not fit into i64 && type mismatch in `res9 + e`, expected i128, actual i64
   │             ^^^^^^^^^^^^^^^^^^^^^^^ Invalid number literal. The given literal cannot fit into 'i64'

error: invalid number literal
   ┌─ tests/signed-int/invalid/invalid_constants.move:45:13
   │
45 │     let c = 170141183460469231731687303715884105728i128; // type mismatch in `res7 + c`, expected u128|u256, actual i128
   │             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid number literal. The given literal cannot fit into 'i128'

error: invalid number literal
   ┌─ tests/signed-int/invalid/invalid_constants.move:46:13
   │
46 │     let d = -170141183460469231731687303715884105729; // no type can be inffered
   │             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid number literal. The given literal cannot fit into the largest possible integer type, 'u256'

error: invalid number literal
   ┌─ tests/signed-int/invalid/invalid_constants.move:47:13
   │
47 │     let e = -170141183460469231731687303715884105729i128; // constant does not fit into i128
   │             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid number literal. The given literal cannot fit into 'i128'
